Cambios CSS y Responsive

--- a/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/comentario/creaedita-comentario/creaedita-comentario.component.css
@@ -1,5 +1,5 @@
 .container {
-  max-width: 600px;
+  width: 60%;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
@@ -48,4 +48,8 @@ mat-error {
   background-color: #11998e;
   color: #fff;
   margin-right: 10px;
+}
+
+button{
+  margin: 10px;
 }
