--- a/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.html
@@ -16,9 +16,13 @@
     </head>
     <body>
       <div id="mySidenav" class="sidenav">
-        <img src="assets/image/Logo_verde.png" alt="Logo de la empresa" />
+        <div class = "logoprincipal">
+          <img src="assets/image/Logo_verde.png" alt="Logo de la empresa" />
 
-        <p class="logo">Portal Arrendador</p>
+          <p class="logo">Portal Arrendador</p>
+          
+        </div>
+        
         <label for="menu16" class="menu" routerLink="/components/profile">
           <i class="material-icons">person</i>
           PERFIL
