--- a/SAFE_PARKING_FRONT/src/app/components/navbar-conductor/navbar-conductor.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-conductor/navbar-conductor.component.html
@@ -7,9 +7,12 @@
   </head>
   <body>
     <div id="mySidenav" class="sidenav">
-      <img src="assets/image/Logo_verde.png" alt="Logo de la empresa" />
-      <p class="logo">Portal Conductor</p>
-
+      <div class ="logoprincipal">
+        <img src="assets/image/Logo_verde.png" alt="Logo de la empresa" />
+        <p class="logo">Portal Conductor</p>
+  
+      </div>
+      
       <label for="menu16" class="menu" routerLink="/components/profile">
         <i class="material-icons">person</i>
         PERFIL
