--- a/SAFE_PARKING_FRONT/src/app/components/sign-up/sign-up.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/sign-up/sign-up.component.html
@@ -22,7 +22,7 @@
 
     <div>
       <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
-        <mat-tab label="MIRA TU MEMBRESIA">
+        <mat-tab label="ELIGE TU MEMBRESIA">
           <app-listar-usuario-membresia></app-listar-usuario-membresia>
         </mat-tab>
         <mat-tab label="REGISTRATE">
