--- a/SAFE_PARKING_FRONT/src/app/components/footer/footer.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/footer/footer.component.css
@@ -5,7 +5,7 @@ footer {
     height: 300px;
     background-color: #000000;
     margin-top: auto;
-    min-width: 475px;
+    /* min-width: 475px;*/
 }
 footer .container{
     display: flex; /*Columnas una de otras*/
