--- a/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/home-arrendador/home-arrendador.component.css
@@ -2,6 +2,7 @@ body {
     background-color: #f2f2f2;
     margin-left: 250px;
     /*Tomar en cuenta esto*/
+    height: 100vh;
     background: linear-gradient(to right, #11998e, #38ef7d);
   }
 
