--- a/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario/creaedita-horario/creaedita-horario.component.css
@@ -8,8 +8,8 @@ body {
 }
 
 .boton_registro {
-  background-color: #38ecd4;
-  color: #000000;
+  background-color: #11998e;
+  color: #ffffff;
   border: none;
   border-radius: 5px;
   padding: 10px 20px;
@@ -17,7 +17,7 @@ body {
   margin-top: 10px;
 }
 .container {
-  max-width: 600px;
+  width: 60%;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
@@ -25,15 +25,6 @@ body {
   margin: 0 auto;
   /* Centra horizontalmente */
   margin-top: 50px;
-}
-.boton_registro {
-  background-color: #38ecd4;
-  color: #000000;
-  border: none;
-  border-radius: 5px;
-  padding: 10px 20px;
-  cursor: pointer;
-  margin-top: 10px;
 }
 
 h1 {
