--- a/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/incidente/creaedita-incidente/creaedita-incidente.component.css
@@ -6,7 +6,6 @@ body {
 
 }
 
-
 .titulo {
   color: #000000;
   text-align: center;
@@ -15,14 +14,15 @@ body {
 }
 
 .container {
-background-color: #fff;
+  background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 5px;
-  width: 700px;
+  width: 60%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin: 10px auto;
 }
+
 .fecha {
   background-color: #fff;
   border: 1px solid #ddd;
@@ -32,14 +32,18 @@ background-color: #fff;
   padding: 20px;
   margin: 20px;
 }
+
 .example-form {
   display: flex;
   flex-direction: column;
+  margin: 20px;
+
 }
 
 .mat-form-field {
   margin: 10px 0;
   width: 100%;
+  
 }
 
 input.mat-input {
@@ -70,19 +74,25 @@ button.boton_registro {
   cursor: pointer;
   margin-top: 10px;
 }
+
 button.boton_registro:hover {
   background-color: #080808;
-   color: #fff;
+  color: #fff;
 }
+
 .btn-container {
   justify-content: center;
   text-align: center;
 }
+
 mat-error {
   color: #e74c3c;
 }
 
-.botonRegistro{
+.botonRegistro {
   background-color: #11998e;
   color: #fff;
+}
+button{
+  margin: 10px;
 }
