--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-usuario-membresia/listar-usuario-membresia.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-usuario-membresia/listar-usuario-membresia.component.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="titulo">
-        <h2>Lista de membresías</h2>
-      </div>
 
-      <ul class="membership-list">
-        <li class="membership-item" *ngFor="let membership of memberships">
-          <div class="informacion">
-            <div class="tipo_membresia">
-              <h3>{{ membership.tipoMembresia }}</h3>
-            </div>
-            <div class="precio">
-              <p>S/{{ membership.precio }}/mes</p>
-            </div>
-            <div class="contenido">
-              <p>
-                Fecha de inicio: {{ membership.fechaInicio }}
-                <br />
-                Fecha de fin: {{ membership.fechaFin }}
-              </p>
-            </div>
-          </div>
-        </li>
-      </ul>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+
+  <div class="container">
+    <div class="titulo">
+      <h2>Elige el tipo de plan que deseas llevar</h2>
     </div>
-  </body>
+
+    <div class="membership-list">
+      <mat-card *ngFor="let membership of memberships" 
+      class="membership-item">
+        <div class="informacion">
+          <div class="tipo_membresia">
+            <h3>{{ membership.tipoMembresia }}</h3>
+          </div>
+          <div class="precio">
+            <p>S/{{ membership.precio }}/mes</p>
+          </div>
+          <div class="contenido">
+            <p>
+              Fecha de inicio: {{ membership.fechaInicio }}
+              <br />
+              Fecha de fin: {{ membership.fechaFin }}
+            </p>
+          </div>
+        </div>
+      </mat-card>
+    </div>
+  </div>
+
+</body>
+
 </html>
