--- a/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-administrador/navbar-administrador.component.css
@@ -1,20 +1,26 @@
 /*Barra de navegacion Lateral-----------------*/
 .logo {
+  margin: 0px;
   font-weight: bold;
   color: white;
   font-size: large;
   /* Utilizamos display: flex */
   text-align: center;
+  margin-bottom: 15px;
 }
-
+.logoprincipal{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 img {
   max-width: 100px;
-  margin-left: 50px;
+  justify-content: center;
 }
 /* Estilos del sidenav */
 .sidenav {
   width: 250px;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -22,7 +28,7 @@ img {
   background-color: #1f1f1f;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  overflow: auto
+  overflow: auto;
 }
 
 .sidenav label:hover {
