--- a/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-arrendador/navbar-arrendador.component.css
@@ -5,16 +5,21 @@
   font-size: large;
   /* Utilizamos display: flex */
   text-align: center;
+  margin-bottom: 15px;
 }
-
+.logoprincipal{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 img {
   max-width: 100px;
-  margin-left: 50px;
+  justify-content: center;
 }
 /* Estilos del sidenav */
 .sidenav {
   width: 250px;
-  height: 100%;
+  height: 100vh;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -23,6 +28,7 @@ img {
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   overflow: auto
+  
 }
 
 .sidenav label:hover {
