--- a/SAFE_PARKING_FRONT/src/app/components/navbar-conductor/navbar-conductor.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/navbar-conductor/navbar-conductor.component.css
@@ -6,16 +6,21 @@
     font-size: large;
     /* Utilizamos display: flex */
     text-align: center;
-    margin: 15px;
-  }
-  img {
-    max-width: 100px;
-    margin-left: 80px;
-  }
+    margin-bottom: 15px;
+}
+.logoprincipal{
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+img {
+  max-width: 100px;
+  justify-content: center;
+}
   /* Estilos del sidenav */
   .sidenav {
     width: 250px;
-    height: 100%;
+    height: 100vh;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -23,8 +28,8 @@
     background-color: #1f1f1f;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    overflow: auto
-
+    overflow: auto;
+    
   }
 
   .sidenav label:hover {
