--- a/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/reserva-estacionamiento/creaedita-reserva-estacionamiento/creaedita-reserva-estacionamiento.component.css
@@ -1,34 +1,34 @@
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
-    background: linear-gradient(to right, #11998e, #38ef7d);
-    padding: 20px;
-    margin-left: 250px;
-    height: auto;
+  font-family: Arial, sans-serif;
+  background: linear-gradient(to right, #11998e, #38ef7d);
+  padding: 20px;
+  margin-left: 250px;
+  height: 100vh;
 
 }
 
 .container {
-    max-width: 600px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  width: 60%;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 
 h1 {
-    color: #333;
+  color: #333;
 }
 
 /* Estilos para los campos de formulario */
 mat-form-field {
-    width: 500px;
-    margin-bottom: 15px;
+  width: 500px;
+  margin-bottom: 15px;
 }
 
 /*Estilos para los botones*/
@@ -36,7 +36,7 @@ mat-form-field {
 
 button.boton_registro:hover {
   background-color: #080808;
-   color: #fff;
+  color: #fff;
 }
 
 .btn-container {
@@ -44,12 +44,17 @@ button.boton_registro:hover {
   text-align: center;
   margin: 5px;
 }
+
 mat-error {
   color: #e74c3c;
 }
 
-.boton_registro{
+.boton_registro {
   background-color: #11998e;
   color: #fff;
   margin-right: 10px;
+}
+
+button {
+  margin: 10px;
 }
