--- a/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/rol/creaedita-rol/creaedita-rol.component.css
@@ -3,6 +3,7 @@ body {
     font-family: Arial, sans-serif;
     background: linear-gradient(to right, #11998e, #38ef7d);
     padding: 20px;
+    height: 100vh;
 
 }
 
@@ -19,7 +20,6 @@ body {
     /* Centra verticalmente */
     margin-top: 80px;
 }
-
 
 h1 {
     color: #333;
@@ -38,7 +38,7 @@ button {
 
 }
 
-.botonRegistro{
+.botonRegistro {
     background-color: #11998e;
     color: #fff;
-  }
+}
