--- a/SAFE_PARKING_FRONT/src/app/components/home-administrador/home-administrador.component.html
+++ b/SAFE_PARKING_FRONT/src/app/components/home-administrador/home-administrador.component.html
@@ -10,7 +10,12 @@
   </head>
 
   <body>
-    <app-navbar-administrador></app-navbar-administrador>
+    <!-- Para ocultar barra en responsive -->
+    <button (click)="toggleNavbar()" class="toggle-button">
+      <i class="fa fa-bars"></i>
+    </button>
+    <!-- Fin de ocultar barra en responsive -->
+    <app-navbar-administrador [hidden]="!mostrarNavbar"></app-navbar-administrador>
     <div class="contenido-principal">
       <div class="textoPrincipal">
         <h1>Panel de Administración de Estacionamientos</h1>
@@ -66,7 +71,7 @@
       </div>
     </div>
 
-   
+
 
   </body>
 
