--- a/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/localizaciones/buscar-localizaciones/buscar-localizaciones.component.css
@@ -10,8 +10,9 @@ body {
   background: linear-gradient(to right, #11998e, #38ef7d);
   color: #333;
   padding: 30px;
-  margin-left: 250px;
+  margin-left: 280px;
   height: 100hv;
+  justify-content: center; /* Centrar verticalmente */
 
 }
 
@@ -64,11 +65,8 @@ button:hover {
 
 /* Mapa */
 .map-container {
-  width: 50%;
+  max-width: 500px;
   height: 300px;
   border-radius: 5px;
   margin: 40px auto; /* Centrar horizontalmente */
-  flex-direction: column;
-  justify-content: center; /* Centrar verticalmente */
-  align-items: center; /* Centrar horizontalmente */
 }
