--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/buscar-usuarios/buscar-usuarios.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/buscar-usuarios/buscar-usuarios.component.css
@@ -12,7 +12,7 @@ body {
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  width: 800px;
+  width: 50%;
   margin:  auto;
   /* Centrar horizontalmente */
   flex-direction: column;
@@ -53,7 +53,7 @@ body {
   border-radius: 5px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  width: 600px;
+  width: 50%;
   margin: 0 auto;
   /* Centrar horizontalmente */
 }
