--- a/SAFE_PARKING_FRONT/src/app/components/home-administrador/home-administrador.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/home-administrador/home-administrador.component.css
@@ -2,7 +2,7 @@ body {
   margin-left: 280px;
   /*Tomar en cuenta esto*/
   background: linear-gradient(to right, #11998e, #38ef7d);
-  height: 100vh;
+  height: auto;
 }
 
 /*Estilos de la fuente - Titulos y textos*/
