--- a/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/horario-estacionamiento/listar-admin-horario-estacionamiento/listar-admin-horario-estacionamiento.component.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
-  margin-left: 250px;
+  margin-left: 280px;
   padding: 30px;
 
 }
@@ -25,7 +25,8 @@ table {
   margin: 0 auto;
   /* Centra horizontalmente */
 
-  overflow: auto;
+  overflow-x: auto; /* Agrega una barra de desplazamiento horizontal si es necesario */
+
 }
 td.mat-column-star {
   width: 20px;
