--- a/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-admin-estacionamiento/listar-admin-estacionamiento.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/estacionamiento/listar-admin-estacionamiento/listar-admin-estacionamiento.component.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
-  margin-left: 250px;
+  margin-left: 280px;
   padding: 30px;
 
 }
@@ -16,6 +16,7 @@ h2 {
 table {
   width: 800px;
 }
+
 .example-container {
   width: 90%;
   padding: 20px;
@@ -24,16 +25,21 @@ table {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 0 auto;
+
   /* Centra horizontalmente */
 
-  overflow: auto;
+  overflow-x: auto;
+  /* Agrega una barra de desplazamiento horizontal si es necesario */
+
 }
+
 td.mat-column-star {
   width: 20px;
   padding-right: 8px;
 }
 
-th.mat-column-position, td.mat-column-position {
+th.mat-column-position,
+td.mat-column-position {
   padding-left: 8px;
 }
 
@@ -44,26 +50,29 @@ th.mat-column-position, td.mat-column-position {
 .mat-table-sticky:last-child {
   border-left: 1px solid #696969;
 }
-.botoncito1{
+
+.botoncito1 {
   background-color: #11998e;
   color: #fff;
   border-radius: 8px;
   padding-right: 5px;
 }
-.botoncito2{
+
+.botoncito2 {
   background-color: #000000;
   color: #fff;
   border-radius: 8px;
   padding-right: 5px;
 }
 
-.botoncito1{
+.botoncito1 {
   background-color: #11998e;
   color: #fff;
   border-radius: 8px;
   padding-right: 5px;
 }
-.botoncito2{
+
+.botoncito2 {
   background-color: #000000;
   color: #fff;
   border-radius: 8px;
