--- a/SAFE_PARKING_FRONT/src/app/components/home-conductor/home-conductor.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/home-conductor/home-conductor.component.css
@@ -1,7 +1,7 @@
 body {
   margin-left: 250px;
   /*Tomar en cuenta esto*/
-  height: 100vh;
+  height: auto;
   background: linear-gradient(to right, #11998e, #38ef7d);
 }
 
