--- a/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/creaedita-membresia/creaedita-membresia.component.css
@@ -17,7 +17,7 @@ body {
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 5px;
-  width: 80%;
+  width: 70%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin: 100px auto;
@@ -27,12 +27,11 @@ body {
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 5px;
-  width: 50%;
+  width: 100%;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   margin-bottom: 20px;
   margin-top: 20px;
-  margin-right: 10px;
 }
 
 .example-form {
@@ -46,6 +45,7 @@ mat-label {
 
 .seccion._fechas {
   display: flex;
+  flex-wrap: wrap;
 }
 
 .mat-datepicker-toggle {
