--- a/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/membresia/listar-admin-membresia/listar-admin-membresia.component.css
@@ -1,59 +1,48 @@
-/*Estilos del form*/
+/* Estilos del form */
 
 table {
   background-color: rgb(255, 255, 255);
+  width: 100%;
+  overflow-x: auto; /* Agrega una barra de desplazamiento horizontal si es necesario */
 }
 
-body{
+body {
   background: linear-gradient(to right, #11998e, #38ef7d);
   margin-left: 250px;
   padding: 30px;
-
 }
+
 .container {
-  width: 800px;
+  width: 80%;
   padding: 20px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin: 100px auto;
-  /* Centra horizontalmente */
   margin-top: 50px;
+  overflow-x: auto; /* Agrega una barra de desplazamiento horizontal si es necesario */
 }
 
 h2 {
   color: #333;
 }
 
-.botoncito1{
+.botoncito1,
+.botoncito2 {
   background-color: #11998e;
-  color: #fff;
-  border-radius: 8px;
-  padding-right: 5px;
-}
-.botoncito2{
-  background-color: #000000;
-  color: #fff;
-  border-radius: 8px;
-  padding-right: 5px;
-}
-.botoncito1{
-  background-color: #11998e;
-  color: #fff;
-  border-radius: 8px;
-  padding-right: 5px;
-}
-.botoncito2{
-  background-color: #000000;
   color: #fff;
   border-radius: 8px;
   padding-right: 5px;
 }
 
-/*Responsive y boton lateral..........*/
+.botoncito2 {
+  background-color: #000000;
+}
+
+/* Responsive y botón lateral */
+
 .toggle-button {
-  display: none;
-  /* Oculta el botón por defecto */
+  display: none; /* Oculta el botón por defecto */
 }
 
 /* Media query para pantallas más pequeñas */
