--- a/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/pago/listar-admin-pago/listar-admin-pago.component.css
@@ -24,7 +24,8 @@ table {
   margin: 0 auto;
   /* Centra horizontalmente */
 
-  overflow: auto;
+  overflow-x: auto; /* Agrega una barra de desplazamiento horizontal si es necesario */
+
 }
 td.mat-column-star {
   width: 20px;
