--- a/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.css
+++ b/SAFE_PARKING_FRONT/src/app/components/usuarios/creaedita-usuario/creaedita-usuario.component.css
@@ -1,21 +1,20 @@
 /* Estilos para los campos de formulario */
 .container {
   margin-bottom: 50px;
-  background-color: #ffffff;
+  background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   /* Centra horizontalmente */
-  margin-top: 50px;
-  padding: 25px;
+  max-width: 100%;
+  padding: 20px;
   margin: 60px;
 }
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(to right, #11998e, #38ef7d);
-  height: 100vh;
+  height: 100%;
+  justify-content: center;
 
-  /*margin-left: 260px;*/
-  padding: 50px;
 }
 /*Estilos para los botones*/
 
@@ -28,12 +27,14 @@ button {
 }
 
 .example-form {
-  
-  background-color: white;
+  max-width: 100%;
+  background-color: rgb(255, 255, 255);
   border-radius: 8px;
-  margin: 20px;
+  height: auto;
+ 
 }
 .formularios {
+  background-color: rgb(255, 255, 255);
   display: flex;
   border-radius: 8px;
   height: auto;
@@ -46,7 +47,7 @@ button {
 }
 .secciones {
   margin: 15px;
-  width: 380px; /* Expand to full width */
+  width: 480px;
   height: 400px;
   background-color: rgb(221, 221, 221);
   align-items: center;
